@@ -23,14 +23,12 @@
 
 package com.iluwatar.hexagonal.test;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
-
 import com.iluwatar.hexagonal.domain.LotteryNumbers;
 import com.iluwatar.hexagonal.domain.LotteryTicket;
 import com.iluwatar.hexagonal.domain.LotteryTicketId;
 import com.iluwatar.hexagonal.domain.PlayerDetails;
+
+import java.util.Set;
 
 /**
  * 
@@ -43,7 +41,7 @@ public class LotteryTestUtils {
    * @return lottery ticket
    */
   public static LotteryTicket createLotteryTicket() {
-    return createLotteryTicket("foo@bar.com", "12231-213132", "+99324554", new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+    return createLotteryTicket("foo@bar.com", "12231-213132", "+99324554", Set.of(1, 2, 3, 4));
   }
   
   /**
